--- a/gatsby-site/src/assets/scss/components/_projects.scss
+++ b/gatsby-site/src/assets/scss/components/_projects.scss
@@ -12,6 +12,7 @@
     @include vendor('justify-content', 'flex-start');
     @include vendor('flex-direction', 'column');
     @include vendor('align-items', 'center');
+    -webkit-filter: blur(0);
 
     h1 {
       color: white !important;
@@ -24,7 +25,23 @@
       width: 90%;
       max-width: 1000px;
       background: white;
-
+      
+      > section {
+        padding: 0 2rem;
+        text-align: left;
+        margin-top: 1rem;
+        white-space: pre-line;
+        h2 {
+          font-size: 1.8rem;
+          font-weight: bolder;
+          text-align: center;
+        }
+        p {
+          -webkit-filter: blur(0);
+          font-size: 1.2rem;
+          line-height: 1.6em;
+        }
+      }
 
       header {
         width: 100%;
